# justgivenup

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.ps1
assets/: config.json
src/: browser.cpp  browser.h  capture.cpp  capture.h  config.cpp  config.h  detector.cpp  detector.h  filter.cpp  filter.h  guardian.cpp  guardian.h  lock.cpp  lock.h  log.cpp  log.h  main.cpp  resource.rc  tray.cpp  tray.h  watchdog.cpp  watchdog.h
